# incore

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  run_tests.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_policyholders_table.py  002_add_policies_and_coverages_tables.py  003_add_quotes_and_pricing_rules_tables.py  004_add_underwriting_reviews_table.py  20260402_2255-e61487a312a2_add_invoices_and_payments_tables.py  20260403_0014-983338379ccf_rename_payment_metadata_column.py  20260403_0202-36190d67d906_add_users_table.py  20260403_1556-cc0bfff7d6fb_add_composite_indexes_for_query_.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/domains/billing/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/policies/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/policy_holders/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/policyholders/: __init__.py  models.py  repository.py  (+3 more)
backend/app/scripts/: seed_pricing_rules.py
backend/app/shared/: __init__.py  enums.py  types.py
backend/app/workflows/: __init__.py  quote_to_policy.py  router.py  schemas.py
backend/tests/: test_billing.py  test_config.py  test_enums.py  test_exceptions.py  test_main.py  test_policies.py  test_policyholders.py  test_pricing.py  test_schemas.py  test_security.py  test_underwriting.py  test_users.py
(+89 files in other folders)
